--- a/src/style.css
+++ b/src/style.css
@@ -19,12 +19,12 @@ button {
   border-radius: 8px;
   font-size: 20px;
 }
-.logo{
+.Nice-logo{
   position: absolute;
   bottom: 26%;
   right: 28%;
 }
-.red-logo{
+.Redberry-logo{
   position: absolute;
   top: 25px;
   left: 70px;
